feat: changed publish to itch workflow

--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -22,10 +22,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
       - name: Publish to Itch
-        uses: Ayowel/butler-to-itch@v1.0.0
-        with:
-          butler_key: ${{secrets.ITCHIO_TOKEN}}
-          itch_user: stampede-studios 
-          itch_game: star-knight 
-          version: ${{ github.ref_name }}
-          files: "${{ steps.export.outputs.archive_directory }}/star-knigth-web.zip"
+        uses: manleydev/butler-publish-itchio-action@master
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.ITCHIO_TOKEN}}
+          CHANNEL: HTML
+          ITCH_GAME: star-knight 
+          ITCH_USER: stampede-studios
+          PACKAGE: "${{ steps.export.outputs.archive_directory }}/star-knigth-web.zip"
