--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,24 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.2.3
+    rev: v4.6.0
     hooks:
       - id: trailing-whitespace
+        name: Trailing spaces check
       - id: end-of-file-fixer
+        name: EOF character check
       - id: check-yaml
+        name: Yaml format check
 
   - repo: local
     hooks:
       - id: gdformat
-        name: gdformat
+        name: Gdscript format check
         entry: gdformat
         language: system
         types: [file]
         files: '\.gd$'
-
-      - id: commitlint
-        name: commitlint
-        entry: npx
-        args: ['commitlint', '--edit', '$GIT_PARAMS']
-        language: system
+      - id: conventional-commit
+        name: Enforcing conventional commit
+        entry: .githooks/commit-msg-check
+        language: script
         stages: [commit-msg]
