fix: removed unnecessary else statement

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,21 +4,29 @@ repos:
     hooks:
       - id: trailing-whitespace
         name: Trailing spaces check
+        description: This hook trims trailing whitespace.
+
       - id: end-of-file-fixer
         name: EOF character check
+        description: This hook fixes EOF character.
+
       - id: check-yaml
         name: Yaml format check
+        description: This hook enforce yaml files format.
 
   - repo: local
     hooks:
       - id: gdformat
         name: Gdscript format check
+        description: This hook enforce gdscript files format.
         entry: gdformat
         language: system
         types: [file]
         files: '\.gd$'
+
       - id: conventional-commit
         name: Enforcing conventional commit
+        description: This hook check commit message to enforce conventional commit messages.
         entry: .githooks/commit-msg-check
         language: script
         stages: [commit-msg]
