--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -2,10 +2,10 @@ name: Static checks
 
 on:
   push:
-  #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
-  # workflow_dispatch:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   static-checks:
@@ -15,4 +15,3 @@ jobs:
     - uses: actions/checkout@v4
     - uses: Scony/godot-gdscript-toolkit@master
     - run: gdformat --check .
-    - run: gdlint .
